app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: wil-playground
